<resources>
    <string name="app_name">Listit</string>
    <string name="list_it">List it</string>
    <string name="ob_text1">Buy, Sell, and Connect — All in One Place!</string>
    <string name="ob_text2">Discover amazing deals near you or find the perfect buyer in just a few taps.</string>
    <string name="next">Next</string>
    <string name="ob2_text1">Got Something to Sell? Snap, Post, Done!</string>
    <string name="ob2_text2">Upload photos, add details, and publish your ad instantly - it’s that simple.</string>
    <string name="ob3_text1">Find What You Need, When You Need It.</string>
    <string name="ob3_text2">Browse thousands of listings - from gadgets to vehicles - all posted by real people like you.</string>
    <string name="login_text1">Enter your email and let’s get started!</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="or">OR</string>
    <string name="login_with_google">Login with Google</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">Signup</string>
    <string name="muhammad">Muhammad</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_email_and_phone_number_to_send_one_time_password">Enter email and phone number to send one time Password</string>
    <string name="continued">Continue</string>
    <string name="phone_number">Phone Number</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="hi_sir">Hi Sir</string>
    <string name="hey_how_can_i_help_you">Hey! How can i help you?</string>
    <string name="last_seen_yesterday">Last seen Yesterday</string>
    <string name="rs">Rs</string>
    <string name="_3_650_000">3,650,000</string>
    <string name="send_offer">Send Offer</string>
    <string name="type_a_message">Type a Message...</string>
    <string name="verification_code">Verification Code</string>
    <string name="we_have_sent_the_verification">We have sent the verification</string>
    <string name="code_to_your_email_address">code to your email address</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="full_name">Full Name</string>
    <string name="phone_number2">Phone Number</string>
    <string name="sign_up2">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="hippie_van_1967_wow">Hippie Van 1967 Wow</string>
    <string name="_2_min">2 min</string>
    <string name="new_york">New York</string>
    <string name="_440_00">$440.00</string>
    <string name="car">Car</string>
    <string name="vehicles">Vehicles</string>
    <string name="_40">(40+)</string>
    <string name="found_results">Found Results :</string>
    <string name="mobile_phones">Mobile Phones</string>
    <string name="furniture">Furniture</string>
    <string name="listit">Listit</string>
    <string name="sort_by">Sort By :</string>
    <string name="lowest_price">Lowest Price</string>
    <string name="filters_7">Filters (7)</string>
    <string name="cars">Cars</string>
    <string name="notifications">Notifications</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="logout">Logout</string>
    <string-array name="categories_array">
        <item>Select Category</item>
        <item>Mobiles &amp; Tablets</item>
        <item>Vehicles - Cars</item>
        <item>Vehicles - Motorcycles</item>
        <item>Vehicles - Parts</item>
        <item>Property - For Sale</item>
        <item>Property - For Rent</item>
        <item>Electronics - Computers</item>
        <item>Electronics - TV &amp; Audio</item>
        <item>Furniture</item>
        <item>Fashion</item>
        <item>Services</item>
    </string-array>
</resources>