<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Chat_offer">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <RelativeLayout
            android:id="@+id/topNav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp">
            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/back_arrow"
                android:layout_margin="10dp"
                android:layout_centerVertical="true"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/back_btn"
                android:layout_toLeftOf="@id/call_btn"
                android:background="@drawable/rounded_orange_border"
                >
                <ImageView
                    android:id="@+id/user_pfp"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/user_pfp"/>
                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/user_pfp"
                    android:text="@string/muhammad"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/rubik_bold"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/last_seen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/user_pfp"
                    android:layout_below="@id/username"
                    android:text="@string/last_seen_yesterday"
                    android:layout_marginStart="20dp"
                    android:fontFamily="@font/rubik_regular"
                    android:textColor="@color/grey"
                    />

            </RelativeLayout>
            <ImageView
                android:id="@+id/call_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/phone_hollow"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/chats_section"
            android:layout_below="@+id/topNav"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:background="@color/light_grey"
            >
            <TextView
                android:id="@+id/right_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi_sir"
                android:layout_alignParentEnd="true"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_orange_border"
                android:backgroundTint="@color/grey"
                android:textColor="@color/white"
                android:padding="15dp"/>
            <TextView
                android:id="@+id/left_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/right_message"
                android:layout_margin="10dp"
                android:text="@string/hey_how_can_i_help_you"
                android:background="@drawable/rounded_orange_border"
                android:backgroundTint="@color/orange"
                android:textColor="@color/white"
                android:padding="15dp"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_rounded_rectangle"
            android:backgroundTint="@color/orange"
            android:layout_alignParentBottom="true">
            <ImageView
                android:layout_width="103dp"
                android:layout_height="6dp"
                android:background="@drawable/offer_slidebar"
                android:layout_centerHorizontal="true"/>
            <TextView
                android:id="@+id/offer_text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/make_an_offer"
                android:textSize="16sp"
                android:layout_centerHorizontal="true"
                android:textColor="@color/white"
                android:fontFamily="@font/rubik_bold"
                android:layout_marginTop="30dp"/>
            <RelativeLayout
                android:id="@+id/offer_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/offer_text1"
                android:layout_centerHorizontal="true"
                android:layout_marginHorizontal="140dp"
                >
            <TextView
                android:id="@+id/offer_text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/grey"
                android:layout_centerVertical="true"
                android:text="@string/rs"
                android:fontFamily="@font/rubik_extrabold"
                />
            <EditText
                android:id="@+id/offer_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_toRightOf="@id/offer_text2"
                android:text="@string/_3_650_000"
                android:textColor="@color/white"
                android:textSize="16dp"
                android:fontFamily="@font/rubik_bold"
                />

            </RelativeLayout>
            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/offer_section"
                android:layout_marginHorizontal="5dp"
                android:layout_marginTop="10dp"
                android:text="@string/send_offer"
                android:fontFamily="@font/rubik_bold"
                android:textSize="16dp"
                app:cornerRadius="5dp"
                android:textColor="@color/orange"
                android:backgroundTint="@color/light_orange"
                >

            </com.google.android.material.button.MaterialButton>

        </RelativeLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>