<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OB_screen2"
    android:background="@drawable/ob_bg"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
        <TextView
            android:id="@+id/listit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_it"
            android:textColor="@color/orange"
            android:textSize="48sp"
            android:fontFamily="@font/rubik_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="80dp"
            />
        <ImageView
            android:id="@+id/ob2_pic1"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/ob_pic2"
            android:layout_centerInParent="true"
            android:layout_below="@id/listit_text"
            android:layout_marginTop="30dp"
            />
        <TextView
            android:id="@+id/ob2_text1"
            android:layout_below="@id/ob2_pic1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ob2_text1"
            android:textColor="@color/black"
            android:textSize="27.12sp"
            android:layout_marginHorizontal="35dp"
            android:fontFamily="@font/rubik_bold"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:id="@+id/ob2_text2"
            android:layout_below="@id/ob2_text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ob2_text2"
            android:textColor="@color/black"
            android:textSize="12.92sp"
            android:layout_marginHorizontal="45dp"
            android:fontFamily="@font/rubik"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textAlignment="center"
            />
        <ImageView
            android:id="@+id/ob2_dots"
            android:layout_width="32.79dp"
            android:layout_height="7dp"
            android:background="@drawable/ob2_dots"
            android:layout_below="@id/ob2_text2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ob2_dots"
            app:cornerRadius="5dp"
            android:backgroundTint="@color/black"
            android:text="@string/next"
            android:fontFamily="@font/rubik_regular"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:textColor="@color/white"
            />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>