<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login_email">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/orange">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="10"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="center"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_it"
                    android:textColor="@color/white"
                    android:textSize="56sp"
                    android:layout_gravity="center"
                    android:fontFamily="@font/rubik_bold"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text1"
                    android:textColor="@color/white"
                    android:fontFamily="@font/rubik_regular"/>
            </LinearLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="8"
                android:background="@drawable/top_rounded_rectangle">
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:layout_marginTop="40dp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/email"
                    app:boxBackgroundMode="outline"
                    app:boxStrokeColor="@color/grey"
                    app:startIconTint="@color/grey"
                    android:textColorHint="@color/grey"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxStrokeWidth="1.5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:paddingStart="40dp"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Space -->
                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <!-- Password Field -->
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_input"
                    android:layout_below="@+id/email_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:hint="@string/password"
                    app:boxStrokeColor="@color/grey"
                    android:textColorHint="@color/grey"
                    app:startIconDrawable="@drawable/password"
                    app:startIconTint="@color/grey"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/grey"
                    app:boxBackgroundMode="outline"
                    app:boxCornerRadiusTopStart="10dp"
                    app:boxCornerRadiusTopEnd="10dp"
                    app:boxCornerRadiusBottomStart="10dp"
                    app:boxCornerRadiusBottomEnd="10dp"
                    app:boxStrokeWidth="1.5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingStart="40dp"
                        android:textColor="@color/black"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>
                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Forgot your Password?"
                    android:textColor="@color/orange"
                    android:layout_below="@id/password_input"
                    android:layout_marginTop="16dp"
                    android:textSize="16sp"
                    android:layout_marginStart="20dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cornerRadius="5dp"
                    android:paddingHorizontal="70dp"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/orange"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/forgot_password"
                    android:layout_marginTop="20dp"
                    />
                <View
                    android:layout_width="167dp"
                    android:layout_height="3dp"
                    android:background="@color/grey"
                    android:layout_below="@+id/login_button"
                    android:layout_marginTop="30dp"
                    />
                <TextView
                    android:id="@+id/or_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:fontFamily="@font/rubik_bold"
                    android:textColor="@color/grey"
                    android:layout_below="@id/login_button"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    />
                <View
                    android:layout_width="167dp"
                    android:layout_height="3dp"
                    android:background="@color/grey"
                    android:layout_below="@+id/login_button"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="30dp"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_google_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/or_text"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="40dp"
                    android:text="@string/login_with_google"
                    android:paddingHorizontal="60dp"
                    android:textColor="@color/orange"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="5dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/orange"
                    app:icon="@drawable/google"
                    app:iconGravity="textStart"
                    app:iconPadding="10dp"
                    app:iconTint="@null" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_phone_btn"
                    android:layout_below="@+id/login_google_btn"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_with_google"
                    android:paddingHorizontal="60dp"
                    android:textColor="@color/orange"
                    android:backgroundTint="@color/white"
                    app:cornerRadius="5dp"
                    app:strokeWidth="2dp"
                    app:strokeColor="@color/orange"
                    app:icon="@drawable/phone"
                    app:iconGravity="textStart"
                    app:iconPadding="10dp"
                    app:iconTint="@null" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/login_phone_btn">
                <TextView
                    android:id="@+id/login_google_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account"
                    android:fontFamily="@font/rubik_regular"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp"
                    />
                <TextView
                    android:id="@+id/login_google_signup"
                    android:layout_toEndOf="@id/login_google_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/signup"
                    android:fontFamily="@font/rubik_bold"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    android:layout_marginTop="30dp"
                    />
                </RelativeLayout>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>